cmd/verification-door/k8s/01-verification-door.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verification-door
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: verification-door
  template:
    metadata:
      labels:
        app: verification-door
    spec:
      containers:
      - name: verification-door
        image: entropypool/verification-door:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: verification-door
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 50090
    targetPort: 50090
  - name: grpc
    port: 50091
    targetPort: 50091
  - name: prometheus
    port: 50092
    targetPort: 50092
