cmd/verification-door/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: verification-door-appid-userid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: verification-door-appid-userid
    k8s.kuboard.cn/workload: verification-door-appid-userid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_userid_rules
        paths:
          - path: /api/verification-door
            backend:
              serviceName: verification-door
              servicePort: 50090
    - host: api.xpool.top
      http: *http_appid_userid_rules
    - host: www.npool.top
      http: *http_appid_userid_rules
    - host: www.xpool.top
      http: *http_appid_userid_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: verification-door-appid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: verification-door-appid
    k8s.kuboard.cn/workload: verification-door-appid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_rules
        paths:
          - path: /api/verification-door/v1/send/email
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/send/sms
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/verify/code
            backend:
              serviceName: verification-door
              servicePort: 50090
    - host: api.xpool.top
      http: *http_appid_rules
    - host: www.npool.top
      http: *http_appid_rules
    - host: www.xpool.top
      http: *http_appid_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: verification-door-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: verification-door-npool
    k8s.kuboard.cn/workload: verification-door-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/verification-door/version
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/verify/google/recaptcha
            backend:
              serviceName: verification-door
              servicePort: 50090
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-verification-door-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/verification-door
