cmd/verification-door/k8s/03-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: verification-door-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: verification-door-traefik-app-user
    k8s.kuboard.cn/workload: verification-door-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_userid_rules
        paths:
          - path: /api/verification-door/v1/get/qrcode/url
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/verify/google/auth
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/verify/code/with/userid
            backend:
              serviceName: verification-door
              servicePort: 50090
    - host: api.procyon.vip
      http: *http_appid_userid_rules
    - host: api.xpool.top
      http: *http_appid_userid_rules

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: verification-door-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: verification-door-traefik-app
    k8s.kuboard.cn/workload: verification-door-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_appid_rules
        paths:
          - path: /api/verification-door/v1/send/email
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/send/sms
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/send/user/site/contact/email
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/version
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/verify/google/recaptcha
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/get/captcher/img
            backend:
              serviceName: verification-door
              servicePort: 50090
          - path: /api/verification-door/v1/verify/captcher
            backend:
              serviceName: verification-door
              servicePort: 50090
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
